# ipykernel_temp_venv

./: README.md  pyproject.toml
src/ipykernel_temp_venv/: __init__.py  __main__.py  cli.py  provisioner.py
src/jlab_temp_env/: __init__.py  provisioner.py
