[project]
name = "jlab_temp_env"
description = "Temporary environments for JupyterLab"
authors = [{ name = "Dan Foreman-Mackey", email = "dfm@dfm.io" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = ["jupyter_client"]

[project.entry-points.'jupyter_client.kernel_provisioners']
temp-env-provisioner = "jlab_temp_env.provisioner:TempEnvProvisioner"

[project.urls]
"Homepage" = "https://github.com/dfm/jlab_temp_env"
"Source" = "https://github.com/dfm/jlab_temp_env"
"Bug Tracker" = "https://github.com/dfm/jlab_temp_env/issues"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/{{ python_project_name }}/_version.py"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = []
exclude = []

[tool.ruff.isort]
known-first-party = ["jlab_temp_env"]
combine-as-imports = true
