[project]
name = "ipykernel_temp_venv"
description = "Launch IPython kernels within temporary virtual environments"
authors = [{ name = "Dan Foreman-Mackey", email = "dfm@dfm.io" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = ["jupyter_client", "ipykernel"]

[project.entry-points.'jupyter_client.kernel_provisioners']
temp-venv-provisioner = "ipykernel_temp_venv:TempVenvProvisioner"

[project.urls]
"Homepage" = "https://github.com/dfm/ipykernel_temp_venv"
"Source" = "https://github.com/dfm/ipykernel_temp_venv"
"Bug Tracker" = "https://github.com/dfm/ipykernel_temp_venv/issues"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ipykernel_temp_venv/_version.py"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = []
exclude = []

[tool.ruff.isort]
known-first-party = ["ipykernel_temp_venv"]
combine-as-imports = true
